Fix no mobile gap

--- a/wp-content/themes/wiseuv/assets/scss/flexible-content.scss
+++ b/wp-content/themes/wiseuv/assets/scss/flexible-content.scss
@@ -853,7 +853,7 @@ section {
                 @media all and (max-width: $tablet) {
                     gap: $gutter * 2;
                 }
-                @media all and (max-width: $tablet) {
+                @media all and (max-width: $mobile) {
                     &.no-mobile-gap {
                         gap: 0;
                         .column-content p:last-of-type {
